fix so that only grid overflows

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,4 +4,5 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  max-height: 100vh;
 }
