--- a/src/components/Chat/chat.module.scss
+++ b/src/components/Chat/chat.module.scss
@@ -1,25 +1,36 @@
 @import 'src/styles/_colors';
 
 .container {
+  position: relative;
   grid-area: chat;
 
   display: flex;
   flex-direction: column;
+  height: 100%;
+}
+
+.header {
+  border-top: 5px solid white;
+  border-bottom: 1px solid $white;
 }
 
 .chats {
   padding: 0.5rem;
   overflow: auto;
   flex: 1;
-  border-top: 1px solid $white;
-  border-bottom: 1px solid $white;
   display: flex;
   flex-direction: column;
   row-gap: 0.5rem;
+}
 
-  max-height: calc(100vh - 32px - 81px - 1rem - 50px - 21px - 20px);
+.chat-input-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid $white;
+  padding: 0.5rem;
 }
 
 .chat-input {
-  margin: 0.5rem;
+  flex: 1;
 }
