--- a/src/components/MainSheet/mainSheet.module.scss
+++ b/src/components/MainSheet/mainSheet.module.scss
@@ -7,25 +7,31 @@ $border-width: 5px;
   grid-template-areas: 'grid chat';
   grid-template-rows: 1fr min-content;
   grid-template-columns: 1fr;
+  flex: 1;
+
+  overflow: auto;
 }
 
 .grid {
   grid-area: grid;
+  min-height: 0;
 
   display: grid;
   grid-auto-columns: 1fr;
   grid-auto-rows: min-content;
   grid-auto-flow: column;
   grid-template-areas:
-    'metadata combat-stats dshd rm chat'
-    'stats skills attacks attacks chat'
-    'inventory features features ccop chat'
-    'dice - - - chat';
+    'metadata combat-stats dshd rm'
+    'stats skills attacks attacks'
+    'inventory features features ccop'
+    'dice - - -';
   > * {
     background-color: $primary;
     border: calc($border-width / 2) solid white;
   }
   border: calc($border-width / 2) solid $white;
+
+  overflow: auto;
 }
 
 .dshd {
